@@ -16,6 +16,7 @@ Updates
 
 Bugfixes
 
+- The SDK only waits for 45s for card reader user input (this time out is now 5 minutes).
 - It is possible to send a cancel to the card reader, even when the card reader has previously indicated that it won't accept it.
 - When sending/receiving data to/from the gateway the SDK doesn't honor timeout values dictated by the card reader.
 - When sending data, from the card reader to the gateway, there is a very small, but real, chance that the data will be truncated, causing an immediate send failure.
